--- a/Khranitel/Pages/MainMenu.xaml
+++ b/Khranitel/Pages/MainMenu.xaml
@@ -6,9 +6,13 @@
       xmlns:local="clr-namespace:Khranitel.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainMenu">
+      Title="Меню">
 
     <Grid>
-        
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button x:Name="RequesListBtn" Content="Просмотр заявок" Click="RequesListBtn_Click"/>
+            <Button x:Name="RequestBtn" Content="Подать личн. заявку" Click="RequestBtn_Click"/>
+            <Button x:Name="GruopBtn" Content="Подать груп. заявку" Click="GruopBtn_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
