--- a/Khranitel/Pages/RequestList.xaml
+++ b/Khranitel/Pages/RequestList.xaml
@@ -15,7 +15,7 @@
 
     <Grid DataContext="{StaticResource requestViewSource}">
 
-        <DataGrid x:Name="requestDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected">
+        <DataGrid x:Name="requestDataGrid" IsReadOnly="True" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="decReasonColumn" Binding="{Binding DecReason}" Header="Dec Reason" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="endDateColumn" Binding="{Binding EndDate}" Header="End Date" Width="SizeToHeader"/>
