--- a/Khranitel/MainWindow.xaml
+++ b/Khranitel/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Khranitel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="800" MinHeight="550" MinWidth="800">
+        Title="Khranitel" Height="550" Width="800" MinHeight="550" MinWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
